# jubby

./: .gitignore  .ignore  .oxlintrc.json  CLAUDE.md  CONTEXT.md  LICENSE  README.md  biome.json  electron-builder.yml  electron.vite.config.ts  index.html  knip.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  tsconfig.preload.json  tsconfig.web.json  vitest.config.ts
.claude/skills/aur-release/: SKILL.md
.claude/skills/create-prd/: SKILL.md
.claude/skills/deploy-process/: SKILL.md
.claude/skills/jubby-architecture/: SKILL.md
.claude/skills/jubby-frontend/: SKILL.md
.claude/skills/jubby-plugins/: SKILL.md
.claude/skills/jubby-rust-backend/: SKILL.md
.claude/skills/jubby-tracing/: SKILL.md
.claude/skills/prd/: SKILL.md
.github/workflows/: release.yml
.sisyphus/: ralph-loop.local.md
aur/: PKGBUILD
docs/adr/: 0001-tag-as-cross-cutting-not-replacement-for-folder.md  0002-task-state-derived-from-timestamps.md
docs/plans/: 2026-01-16-quickclip-design.md  2026-01-17-quickclip-settings-design.md  2026-01-18-quickclip-global-shortcut-design.md
ralph/: loop.sh  prd.example.json  prd.json  progress.txt  prompt.md  run.sh  test-progress.txt  tests.sh
scripts/: release.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  enhancer.rs  lib.rs  logging.rs  main.rs  pipewire_capture.rs  recorder.rs  settings.rs  shortcut.rs  storage.rs  tray.rs  window.rs
src-tauri/src/core/: hyprland.rs  logging.rs  mod.rs  settings.rs  tray.rs  watch.rs  window.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/quickclip/: clipboard.rs  enhancer.rs  errors.rs  mod.rs  persistence.rs  types.rs
src-tauri/src/plugins/quickclip/capture/: mod.rs  screenshot.rs
src-tauri/src/plugins/quickclip/capture/pipewire/: mod.rs  session.rs  stream.rs  tokens.rs
src-tauri/src/plugins/quickclip/recorder/: commands.rs  coordinator.rs  ffmpeg.rs  mod.rs  state.rs  writer.rs
src-tauri/src/plugins/tasks/: commands.rs  helpers.rs  mod.rs  opencode.rs  storage.rs  types.rs  watcher.rs
src-tauri/src/plugins/tasks/opencode/: mod.rs  persistence.rs  server.rs  state.rs
src-tauri/src/plugins/todo/: mod.rs  storage.rs  types.rs
src-tauri/src/shared/: errors.rs  mod.rs  paths.rs
src-tauri/src/storage/: folder.rs  migrations.rs  mod.rs  todo.rs
src-tauri/src/traces/: cleanup.rs  guard.rs  mod.rs  policy.rs  trace.rs  types.rs  writer.rs
src-tauri/tests/: opencode_terminal.rs
src/components/ui/: button.tsx  dropdown-menu.tsx  popover.tsx  sonner.tsx
src/core/: types.ts
src/core/components/: Breadcrumb.tsx  LauncherShell.tsx  PluginErrorBoundary.tsx  PluginGrid.tsx  PluginHeader.tsx  ViewTransition.tsx
src/core/context/: NavigationContext.tsx
src/core/hooks/: index.ts  useDragWindow.ts  useLogger.ts  useNavigationLevels.ts  usePluginStorage.ts  useSettings.ts
src/lib/: logger.ts  trace.ts
src/main/: auto-update.ts  index.ts  logger.ts  window.ts
src/plugins/: registry.ts
src/preload/: index.ts
src/renderer/: AGENTS.md  DESIGN.md  index.html
src/shared/: entity-constants.ts  task-status.ts
tests/: folder-project-migration.test.ts  folders.test.ts  grills.test.ts  logger.test.ts  migration.test.ts  orpc-middleware.test.ts  settings.test.ts  setup.ts  system.test.ts  task-migration.test.ts  task-status.test.ts  tasks.test.ts  todos.test.ts
tests/utils/: assertions.ts  orpc.ts
(+152 files in other folders)
