[package]
name = "jubby"
version = "0.3.5"
description = "Hub de mini-apps pessoais para Linux"
authors = ["you"]
edition = "2021"

[lib]
name = "jubby_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time", "sync", "macros"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
global-hotkey = "0.7"
xcap = "0.0.14"  # Still used for single-frame screenshots in capture.rs
image = "0.25"
clipboard-rs = "0.2"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
rand = "0.8"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"

# PipeWire screen capture (for Wayland)
ashpd = { version = "0.12", features = ["tokio"] }
pipewire = "0.8"
libspa = "0.8"
crossbeam-channel = "0.5"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
